# pi-approx

./: .gitignore  MANIFEST.in  README.md  pi_approx.py  pi_approx_cy.pyx  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yaml
tests/: test_pi_approx.py
