[metadata]
name = pi_approx
version = 1.0.0
description = Helps calculating pi
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernat Gabor
author_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
